2010-01-16  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-edit-setup-help): use 0-witdh
	overlay to display help.
	(twittering-edit-mode, twittering-edit-post-status): do not use
	newline chars for help-overlay anymore.

2010-01-15  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el: changed URL

2010-01-15  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-edit-buffer): New defvar.
	(twittering-update-status-from-pop-up-buffer): Use it.

	* twittering-mode.el (twittering-buffer-active-p): New defun.
	(twittering-http-get-default-sentinel): Call it to show a
	non-critical message on minibuffer only when current buffer is
	twittering-mode related buffer.
	(twittering-http-post-default-sentinel): Likewise.
	(twittering-get-response-body): Likewise.

	* twittering-mode.el (twittering-buffer-active-p): Delete an
	unnecessary code which is added for keep a backward compatibility.

2010-01-15  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-mode-identity): add. Identify
	'twittering-mode.el' by $Id$ tag.

2010-01-14  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-remove-duplicates): check
	availability of `delete-dups' by `fboundp' instead of
	`emacs-major-version'.

2010-01-14  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-format-status): add docstring

2010-01-15  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-update-status-function): add
	(twittering-update-status-from-pop-up-buffer): renamed from
	twittering-edit-status
	(twittering-update-status-interactive, twittering-enter)
	(twittering-organic-retweet, twittering-direct-message): use
	twittering-update-status-function
	(twittering-mode-map): bind 'u' to
	twittering-update-status-interactive

2010-01-13  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-format-string): fix the search of